<resources>
    <string name="app_name">MyPasswordManager</string>
    <string name="title_activity_view_passwords">ViewPasswordsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="add_credential_pair">Add password</string>
    <string name="change_master_password">Change master password</string>
    <string name="title_activity_add_password">AddPasswordActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_change_master_password">ChangeMasterPasswordActivity</string>
    <string name="password_confirmation_hint">Confirm</string>
    <string name="username_hint">Username/Email</string>
    <string name="add_password_button_text">Add password</string>
    <string name="change_password_button_text">Change master password</string>
    <string name="change_password">New password</string>
    <string name="logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="backup">Back up all data</string>
    <string name="title_activity_data_import">DataImportActivity</string>
    <string name="import_warning">Are you sure you want to import this password backup? All existing data will be overwritten.</string>
</resources>
