<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sun_post.mypasswordmanager.ViewPasswordsActivity">
    <item android:id="@+id/add_credential_pair"
        android:title="@string/add_credential_pair"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/change_master_password"
        android:title="@string/change_master_password"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="never" />
    <item android:id="@+id/backup"
        android:title="@string/backup"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="4"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="never" />
</menu>
